--- a/package.json
+++ b/package.json
@@ -6,22 +6,21 @@
   "author": "Joshua Tompkins <josh@joshtompkins.com>",
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^4.14.0",
-    "eslint-config-prettier": "^2.9.0",
-    "eslint-plugin-prettier": "^2.4.0",
-    "jest": "^22.0.4",
-    "node-sass": "^4.7.2",
-    "prettier": "^1.9.2"
+    "eslint": "^8.31.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "jest": "^29.3.1",
+    "node-sass": "^8.0.0",
+    "prettier": "^2.8.2"
   },
   "dependencies": {
-    "joi": "^13.0.2",
-    "pug": "^2.0.0-rc.4",
-    "toml": "^2.3.3"
+    "joi": "^17.7.0",
+    "pug": "^3.0.2",
+    "toml": "^3.0.0"
   },
   "scripts": {
     "format": "prettier --write \"src/**/*.js\"",
-    "compileSass":
-      "node-sass \"./themes\" --output \"./themes\" --output-style compressed",
+    "compileSass": "node-sass \"./themes\" --output \"./themes\" --output-style compressed",
     "test": "jest",
     "testWithDebug": "node --inspect-brk node_modules/.bin/jest --runInBand",
     "verify": "yarn format && yarn compileSass && yarn test"
