--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "readinglist-js",
-  "version": "1.0.0",
+  "version": "2.0.0-alpha.1",
   "description": "A static site generator for your reading list",
   "main": "src/index.js",
   "author": "Joshua Tompkins <josh@joshtompkins.com>",
