--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "husky": "^8.0.3",
     "jest": "^29.3.1",
+    "lint-staged": "^13.1.0",
     "node-sass": "^8.0.0",
-    "prettier": "^2.8.2"
+    "prettier": "2.8.2"
   },
   "dependencies": {
     "joi": "^17.7.0",
@@ -25,10 +27,14 @@
     "compileSass": "node-sass \"./themes\" --output \"./themes\" --output-style compressed",
     "test": "yarn node --experimental-vm-modules $(yarn bin jest)",
     "testWithDebug": "node --inspect-brk node_modules/.bin/jest --runInBand",
-    "verify": "yarn format && yarn compileSass && yarn test"
+    "verify": "yarn format && yarn compileSass && yarn test",
+    "prepare": "husky install"
   },
   "preferGlobal": true,
   "bin": {
     "reading-list": "src/index.js"
+  },
+  "lint-staged": {
+    "**/*": "prettier --write --ignore-unknown"
   }
 }
