--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "readinglist-js",
-  "version": "2.0.0-alpha.2",
+  "version": "2.0.0-alpha.3",
   "description": "A static site generator for your reading list",
   "main": "src/index.js",
   "author": "Joshua Tompkins <josh@joshtompkins.com>",
@@ -28,7 +28,7 @@
     "format": "prettier --write \"src/**/*.js\"",
     "verify": "yarn format && yarn test",
     "prepare": "husky install",
-    "sample": "node src/index.js -b ./test/sample-books-file.json -o ./test"
+    "sample": "node src/index.js -b ./test/sample-books-file.json -o ./test/build"
   },
   "preferGlobal": true,
   "bin": {
