--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
   "license": "MIT",
   "devDependencies": {
     "cheerio": "^1.0.0-rc.12",
-    "eslint": "^8.31.0",
-    "eslint-config-prettier": "^8.6.0",
-    "eslint-plugin-prettier": "^4.2.1",
+    "eslint": "^8.45.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "husky": "^8.0.3",
-    "jest": "^29.3.1",
-    "lint-staged": "^13.1.0",
-    "prettier": "2.8.2"
+    "jest": "^29.6.1",
+    "lint-staged": "^13.2.3",
+    "prettier": "^3.0.0"
   },
   "dependencies": {
     "colors": "^1.4.0",
-    "commander": "^9.5.0",
-    "figlet": "^1.5.2",
-    "joi": "^17.7.0",
+    "commander": "^11.0.0",
+    "figlet": "^1.6.0",
+    "joi": "^17.9.2",
     "pug": "^3.0.2"
   },
   "type": "module",
